2015-02-03  Kelly (KT) Thompson  <kgt@lanl.gov>

	* Release draco-6_15_0.  This is a minor Draco release.
	  https://rtt.lanl.gov/redmine/versions/35.

	* This release was required by Jayenne and Capsaicin.  It is
	  linked to:
	  - Jayenne-7_7_0,   http://rtt.lanl.gov/redmine/versions/33
	  - Capsaicin-4_4_0, http://rtt.lanl.gov/redmine/projects/capsaicin

	* Platforms:
	  PI/ML/MP/MU/LU/TY  Intel 14.0.4    OpenMPI-1.6.5
	  CT/CI              Intel 14.0.4    Cray_MPICH2-7.0.1
	  SQ                 XLC   12.1      MPICH2-1.4

	* Summary of changes:
	- 904 files changed, added or removed in 97 commits.
	- Begin support for Intel Knights Corner platforms with Intel 15 compilers and MPI (#476)
	- Provided a new python program that plots multigroup opacities loaded from IPCRESS files.
	- The smart pointer, rtt_dsxx::SP, class was refactored to work more similarly to C++11's shared_ptr.  This includes
	  checks to prevent up casting (#460).
	- Added a Planck weighted reciprocal opacity weighting functions to collapse multigroup and odfmg opacities.
	- An external interface was provided in quadrature for accessing quadrature ordinates and weights.

	* Details per package:

	Build System:
	- Provided support for linking to MKL as a replacement for LAPACK.
	- Updates implemented to provide support for CMake 3.1+ (#471).
	- Retired build system feature that detected available C++11 features. Begin using CMake 3.1's new CMAKE_CXX_KNOWN_FEATURES
	  global property (#370, #435).
	- Allow the compiler to be a compiler wrapper (e.g.: mpicxx, mpiifort).
	- Reworked vendor setup for MPI to simplify the build system (#466, #467, #468)
	- Begin support for Intel Knights Corner platforms with Intel 15 compilers and MPI (#474, #476, #477, #478, #486).
	- Updated how the build system detects OpenMP and sets compile flags (refs #479)
	- Modified the logic that enabled Fortran as a class 1 language for the generated project.  This registers Fortran as a