@@ -11,7 +11,7 @@
 
 # Build notes: http://rtt/redmine/projects/draco/wiki/Configuration_and_Building
 
-cmake_minimum_required(VERSION 3.1.0 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.2.0 FATAL_ERROR)
 project( Draco CXX C )
 
  # Do not look for Fortran for
